docs/versions/8.0.0/rules/lib/fragments/objc.mdx
<html devsite>
<head>
  <meta name="project_path" value="/_project.yaml">
  <meta name="book_path" value="/versions/8.0.0/_book.yaml">
</head>
<body>

<h1 class="page-title" id="modules.objc">objc</h1>

{% dynamic setvar source_file "src/main/java/com/google/devtools/build/lib/starlarkbuildapi/apple/ObjcConfigurationApi.java" %}
{% dynamic setvar version "8.0.0" %}
{% dynamic setvar original_path "/rules/lib/fragments/objc" %}
{% include "_buttons.html" %}
<!-- {% raw %} -->

A configuration fragment for Objective-C.

<h2>Members</h2>
<ul>
    <li>
    <a href="#alwayslink_by_default">alwayslink_by_default</a>
  </li>
      <li>
    <a href="#copts_for_current_compilation_mode">copts_for_current_compilation_mode</a>
  </li>
      <li>
    <a href="#disallow_sdk_frameworks_attributes">disallow_sdk_frameworks_attributes</a>
  </li>
      <li>
    <a href="#ios_simulator_device">ios_simulator_device</a>
  </li>
      <li>
    <a href="#ios_simulator_version">ios_simulator_version</a>
  </li>
      <li>
    <a href="#run_memleaks">run_memleaks</a>
  </li>
      <li>
    <a href="#signing_certificate_name">signing_certificate_name</a>
  </li>
      <li>
    <a href="#strip_executable_safely">strip_executable_safely</a>
  </li>
      <li>
    <a href="#uses_device_debug_entitlements">uses_device_debug_entitlements</a>
  </li>
  </ul>

      <h2 id="alwayslink_by_default">alwayslink_by_default</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> objc.alwayslink_by_default</pre></p>

    Returns whether objc_library and objc_import should default to alwayslink=True.


        <h2 id="copts_for_current_compilation_mode">copts_for_current_compilation_mode</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/list.html">list</a> objc.copts_for_current_compilation_mode</pre></p>

    Returns a list of default options to use for compiling Objective-C in the current mode.


        <h2 id="disallow_sdk_frameworks_attributes">disallow_sdk_frameworks_attributes</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> objc.disallow_sdk_frameworks_attributes</pre></p>

    Returns whether sdk_frameworks and weak_sdk_frameworks are disallowed attributes.


        <h2 id="ios_simulator_device">ios_simulator_device</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/string.html">string</a> objc.ios_simulator_device</pre></p>

    The type of device (e.g. 'iPhone 6') to use when running on the simulator.

         May return <code>None</code>.

        <h2 id="ios_simulator_version">ios_simulator_version</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../builtins/DottedVersion.html">DottedVersion</a> objc.ios_simulator_version</pre></p>

    The SDK version of the iOS simulator to use when running on the simulator.

         May return <code>None</code>.

        <h2 id="run_memleaks">run_memleaks</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> objc.run_memleaks</pre></p>

    Returns a boolean indicating whether memleaks should be run during tests or not.


        <h2 id="signing_certificate_name">signing_certificate_name</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/string.html">string</a> objc.signing_certificate_name</pre></p>

    Returns the flag-supplied certificate name to be used in signing, or None if no such certificate was specified.

         May return <code>None</code>.

        <h2 id="strip_executable_safely">strip_executable_safely</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> objc.strip_executable_safely</pre></p>

    Returns whether executable strip action should use flag -x, which does not break dynamic symbol resolution.


        <h2 id="uses_device_debug_entitlements">uses_device_debug_entitlements</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> objc.uses_device_debug_entitlements</pre></p>

    Returns whether device debug entitlements should be included when signing an application.



</body>
</html>

<!-- {% endraw %} -->
